refactor create requests currently using Strings
extend CreateGroupRequest to allow setting a group's parentId

Close #254
Close #255